feat: add webcam feed

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
   <div id="app">
     <div class="winsize"></div>
-    <div class="box">
-    </div>
+    <video id="webcam" class="box" autoplay playsinline width="640" height="480"></video>
   </div>
   <script type="module" src="/main.js"></script>
 </body>
