feat: add websockets

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <video id="webcam" class="box" autoplay playsinline width="640" height="480"></video>
   </div>
   <script type="module" src="/main.js"></script>
+  <script type="module" src="/socket.js"></script>
 </body>
 
 </html>
