fix: fixed div issue

--- a/landing/started.html
+++ b/landing/started.html
@@ -48,8 +48,8 @@
                         users to collaborate in interactive rooms called Spaces
                     </b>
                 </div>
-                <input class = "code" placeholder="Enter Code to Join a Space">
-                <div class = "newmeeting">
+                <input type = "text" class = "code" placeholder="Enter Code to Join a Space">
+                <div class = "joinmeeting">
                     Join Meeting
                 </div>
                 
