feat: hopefully workss

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://craig.global.ssl.fastly.net/js/mousetrap/mousetrap.min.js?a4098"></script>
+  <script src="./network.js" type="module"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite App</title>
 </head>
@@ -13,11 +14,9 @@
 <body>
   <div id="app">
     <div class="winsize"></div>
-    <video id="webcam" class="box" autoplay playsinline width="640" height="480"></video>
   </div>
-  <script src="socket.js"></script>
   <script type="module" src="/main.js"></script>
-  
+
 </body>
 
 </html>
