feat: made landing page responsive

--- a/landing/started.html
+++ b/landing/started.html
@@ -48,10 +48,13 @@
                         users to collaborate in interactive rooms called Spaces
                     </b>
                 </div>
-                <input type = "text" class = "code" placeholder="Enter Code to Join a Space">
-                <div class = "joinmeeting">
-                    Join Meeting
-                </div>
+                <form action="">
+                    <input type = "text" class = "code" placeholder="Enter Code to Join a Space">
+                    <button type="submit" class = "joinmeeting">
+                        Join Meeting
+                    </button>
+                </form>
+                
                 
             </div>
 
