--- a/index.html
+++ b/index.html
@@ -1,22 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://craig.global.ssl.fastly.net/js/mousetrap/mousetrap.min.js?a4098"></script>
-  <script src="./network.js" type="module"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width-device-wodth, initial-scale = 1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie-edge">
+    <link rel="stylesheet" href="./landing/landing.css">
+    <title>Landing Page</title>
 </head>
 
 <body>
-  <div id="app">
-    <div class="winsize"></div>
-  </div>
-  <script type="module" src="/main.js"></script>
+    <div class="parent">
+        <div class="navbar">
+            <div class="logo">
+                Alt Reality
+            </div>
+            <div class="navitems">
+                <div class="item">
+                    Home
+                </div>
+                <div class="item">
+                    About us
+                </div>
+                <div class="item">
+                    Pricing
+                </div>
+                <div class="item">
+                    Features
+                </div>
+                <div class="item" id = "signin">
+                    Sign in
+                </div>
+            </div>
+        </div>
+        <div class="content">
 
+            <div class="ldiv">
+                <div class="text1">
+                    <b>
+                        Bring your online<br>
+                        meetings to life
+                    </b>
+                </div>
+                <div class="text2">
+                    <b>
+                        Alt Reality is an online platform designed to<br>
+                        make virtual meetings more interactive.
+                    </b>
+                </div>
+                <div class = "getstarted" onclick="location.href='./landing/started.html';">
+                    Get Started
+                </div>
+            </div>
+
+            <div class="rdiv">
+
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
