feat: form submission

--- a/landing/started.html
+++ b/landing/started.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width-device-wodth, initial-scale = 1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="started.css">
     <title>Landing Page</title>
 </head>
@@ -48,8 +50,8 @@
                         users to collaborate in interactive rooms called Spaces
                     </b>
                 </div>
-                <form action="">
-                    <input type = "text" class = "code" placeholder="Enter Code to Join a Space">
+                <form action="#" id="form" method="POST">
+                    <input type = "text" class = "code" placeholder="Enter Code to Join a Space" name="room_id" >
                     <button type="submit" class = "joinmeeting">
                         Join Meeting
                     </button>
@@ -63,6 +65,8 @@
             </div>
         </div>
     </div>
+    <script src="started.js"></script>
+    
 </body>
 
 </html>
