--- a/app.html
+++ b/app.html
@@ -12,8 +12,14 @@
 </head>
 
 <body>
-  <div id="app">
-    <div class="winsize"></div>
+    <div class="container">
+    <div id="app">
+      <div class="canvas" id="canvas"></div>
+      <div class="controls">
+        
+      </div>
+      <!-- <div class="winsize"></div> -->
+    </div>
   </div>
   <script type="module" src="/main.js"></script>
 
