--- a/app.html
+++ b/app.html
@@ -16,10 +16,11 @@
     <div id="app">
       <div class="canvas" id="canvas"></div>
       <div class="controls">
-        
+        controls
       </div>
-      <!-- <div class="winsize"></div> -->
     </div>
+    <!-- <div class="canvas">a</div>
+    <div class="controls">b</div> -->
   </div>
   <script type="module" src="/main.js"></script>
 
