--- a/app.html
+++ b/app.html
@@ -17,7 +17,7 @@
     <div class="box">
       <video id="webcamVideo" autoplay playsinline height="141" width="250"></video>
     </div>
-    <div class="remoteVid">
+    <div class="remote">
       <video id="remoteVideo" class="remote" autoplay playsinline height="141" width="250"></video>
     </div>
   </div>
